# rust-repunit

./: Cargo.toml  LICENSE  README.md  README_ja.md
src/: lib.rs
